--- a/daw/proUno/proDos.html
+++ b/daw/proUno/proDos.html
@@ -32,7 +32,7 @@
   <!--*************************************************************--> 
   <section>
     <div class="indice">
-      <h3>Índice</h3>
+      
       <ol>
         <li><a href="#2.1">Bloques de un programa de código</a></li>
         <li><a href="#2.2">Variables. Usos y tipos</a></li>
@@ -46,7 +46,7 @@
   <!--*************************************************************-->
   <section>
     <a name="2.0"></a>
-    <h3 >Introducción</h3>
+    <h3 class="subTitulo_3">Introducción</h3>
     <article>
       <p>Para desarrollar nuestros programas utilizaremos el lenguaje de programación C# es un lenguaje de alto nivel que pertenece al conjunto de lenguajes de .NET. Para ello utilizaremos un IDE, un entorno de desarrollo integrado diseñado para el desarrollo de aplicaciones con un conjunto de herramientas integradas en una interfaz gráfica de usuario (GUI). Sus características son:</p>
     </article> 
@@ -62,7 +62,7 @@
     <!--*************************************************************-->
   <section>  
     <a name="2.1"></a>
-    <h3 >Bloques de un programa informático</h3>
+    <h3 class="subTitulo_3">Bloques de un programa informático</h3>
     <article>
       <p>Un programa es una secuencia de intrucciones separadas por un punto y coma que se van a ir agrupando en diferentes bloques mediante llaves.</p>
       <p>Cuando creamos un nuevo proyecto, se crea la siguiente estructura.</p>
@@ -90,7 +90,7 @@
     <!--*************************************************************-->
   <section>  
     <a name="2.2"></a>
-    <h3 >Variables. Usos y Tipos</h3>
+    <h3 class="subTitulo_3">Variables. Usos y Tipos</h3>
     <article>
       <p>Una <b>variable</b> es una estructura de datos que ocupan un espacio en memoria y pueden variar a lo largo de un programa.</p>
       <p>Cuando <b>declaramos una variable</b> establecemos el tipo de dato (entero, cadena, carácter, etc) y su identificador.</p>
@@ -112,7 +112,7 @@
       <p>Tipos matriz: Unidimensionales y Multidimensionales.</p>
       <p>Para <b>definir una variable</b>, primero necesitamos conocer el tipo de datos que va almacenar y el nombre que le vamos asignar. Es importante que el nombre sea identificativo con su contenido.</p>
     </article>
-    <h4>Para <b>identificar a una variable</b>, debemos seguir una serie de normas:</h4>
+    <h4 class="subTitulo_4">Para <b>identificar a una variable</b>, debemos seguir una serie de normas:</h4>
     <article>  
       <ul>
         <li>Debe comenzar por un carácter (letra o "_").</li>
@@ -127,7 +127,7 @@
       <p>A las variables también se les puede asignar un valor, ej.: int num = 5;</p>
       <p>Definimos una variable de tipo entero, llamada num y le asignamos el valor 5.</p>
     </article>
-    <h4>Las variables pueden ser dependiendo de su ámbito:</h4>
+    <h4 class="subTitulo_4">Las variables pueden ser dependiendo de su ámbito:</h4>
     <article>
       <ul>
         <li><b>Variables locales:</b> aquellas declaradas <b>dentro</b> de un método o función.</li>
@@ -142,7 +142,7 @@
     <!--*************************************************************-->
   <section>
     <a name="2.3"></a>
-    <h3 >Constantes y Literales. Tipos y utilidades</h3>
+    <h3 class="subTitulo_3">Constantes y Literales. Tipos y utilidades</h3>
     <h4 >Constantes</h4>
     <article>  
       <p>Son aquellas cuyo contenido no se puede alterar a lo largo del programa. La palabra reservada es <b>const</b>, y se definen fuera del cuerpo de cualquier función, normalmente al principio del programa.</p>
@@ -183,7 +183,7 @@
     <!--*************************************************************-->
   <section>  
     <a name="2.4"></a>
-    <h3 >Operadores del lenguaje de programación</h3>
+    <h3 class="subTitulo_3">Operadores del lenguaje de programación</h3>
     <h4 >Operadores aritméticos</h4>
     <article>  
       <ul>
@@ -303,7 +303,7 @@
     <!--*************************************************************-->
   <section>  
     <a name="2.5"></a>
-    <h3 >Conversiones de tipos de clase</h3>
+    <h3 class="subTitulo_3">Conversiones de tipos de clase</h3>
     <article>
       <p>Cuando declaramos una variable, no se puede volver a declarar, ni asignar un valor de otro tipo. En ocasiones, podemos convertir el valor de una variable de un tipo a otro. Podemos tener diferentes clases de conversiones:</p>
       <ul>
@@ -364,7 +364,7 @@
     <!--*************************************************************-->
   <section>
     <a name="2.6"></a>
-    <h3 >Comentario al código</h3>
+    <h3 class="subTitulo_3">Comentario al código</h3>
     <article>
       <p>No debemos pasar por alto que, además de realizar programas, lo debemos hacer de la forma más optimizada y ordenada posible. Los <b>comentarios</b> son una herramienta disponible en el compilador para que se puedan hacer anotaciones en el código sin que sea procesado por el compilador. Está permitido hacer dos tipos de comentarios:</p>
       <ul>
