--- a/daw/proUno/proTres.html
+++ b/daw/proUno/proTres.html
@@ -31,8 +31,7 @@
   </header>
   <!--*************************************************************--> 
   <section>
-    <div class="indice">
-      <h3>Índice</h3>
+    <div class="indice">     
       <ol>
         <li><a href="#3.1">Fundamentos de programación</a></li>
         <li><a href="#3.2">Introducción a la algoritmia y herramientas de diseño</a></li>
@@ -52,7 +51,7 @@
   <!--*************************************************************-->
   <section>
     <a name="3.0"></a>
-    <h3 >Introducción</h3>
+    <h3 class="subTitulo_3">Introducción</h3>
     <article>
       <p>
         La programación estructurada es un procedimiento que consiste en diseñar e inplementar programas de forma clara y sencilla para que puedan se mantenidos con facilidad.
@@ -64,7 +63,7 @@
     <!--*************************************************************-->
     <section>
       <a name="3.1"></a>
-      <h3 >Fundamentos de programación</h3>
+      <h3 class="subTitulo_3">Fundamentos de programación</h3>
       <article>
         <p>
           Los fundamentos de la programación son un conjunto de técnicas que persiguen desarrollar algoritmos que sean sencillos de escribir, leer, modificar y testear.
@@ -74,7 +73,7 @@
         </p>
       </article>
       <article>
-        <h4>Teorema de Böhm y Jacopini</h4>
+        <h4 class="subTitulo_4">Teorema de Böhm y Jacopini</h4>
         <p>Debe de cumplir las siguientes características:</p>
         <ul>
           <li>Debe tener un único punto de entrada y uno de salida.</li>
@@ -87,7 +86,7 @@
     <!--*************************************************************-->
     <section>
       <a name="3.2"></a>
-      <h3 >Introducción a la algoritmia y herramientas de diseño</h3>
+      <h3 class="subTitulo_3">Introducción a la algoritmia y herramientas de diseño</h3>
       <article>
         <p>
           Un algoritmo es una secuencia de los pasos de las distintas operaciones que debe realizar el programa para conseguir resolver un problema planteado.
@@ -104,7 +103,7 @@
     <!--*************************************************************-->
     <section>
       <a name="3.3"></a>
-      <h3 >Ciclo de vida de un proyecto software</h3>
+      <h3 class="subTitulo_3">Ciclo de vida de un proyecto software</h3>
       <article>
         <p>Ciclo de vida de un programa informático:</p>
         <ul>
@@ -163,7 +162,7 @@
     <!--*************************************************************-->
     <section>
       <a name="3.4"></a>
-      <h3 >Prueba de programas</h3>
+      <h3 class="subTitulo_3">Prueba de programas</h3>
       <article>
         <p>
           Una vez implementado y compilado el código debemos comenzar la estapa de testing.
@@ -192,9 +191,9 @@
     <!--*************************************************************-->
     <section>
       <a name="3.5"></a>
-      <h3 >Tipos de datos: simples y compuestos</h3>
+      <h3 class="subTitulo_3">Tipos de datos: simples y compuestos</h3>
       <article>
-        <h4>Tipos simples</h4>
+        <h4 class="subTitulo_4">Tipos simples</h4>
         <p>
           Debemos considerar el rango de valores que puede tomar, las operaciones a realizar y el espacion necesario para almacenar datos.
         </p>
@@ -225,7 +224,7 @@
         </ul>
       </article>
       <article>
-        <h4>Tipos compuestos o estructurados</h4>
+        <h4 class="subTitulo_4">Tipos compuestos o estructurados</h4>
         <p>Se crean mediante la unión de varios tipos.</p>
         <ul>
           <li>
@@ -247,18 +246,18 @@
     <!--*************************************************************-->
     <section>
       <a name="3.6"></a>
-      <h3 >Estructuras de selección (Condicionales)</h3>
+      <h3 class="subTitulo_3">Estructuras de selección (Condicionales)</h3>
       <article>
         <p>
           Las estructuras de selección son aquellas que permiten ejecutar una parte del código dependiendo de si cumple o no una condición.
         </p>
-        <h4>Instrucción simple (IF)</h4>
+        <h4 class="subTitulo_4">Instrucción simple (IF)</h4>
         <p class="codigo">
           SI CONDICIÓN ENTONCES:
             INSTRUCCIONES_1
           FIN SI;
         </p>
-        <h4>Instrucción doble (IF-ELSE)</h4>
+        <h4 class="subTitulo_4">Instrucción doble (IF-ELSE)</h4>
         <p class="codigo">
           SI CONDICIÓN ENTONCES:
             INSTRUCCIONES_1;
@@ -277,7 +276,7 @@
         </p>
       </article>
       <article>
-        <h4>Operadores lógicos</h4>
+        <h4 class="subTitulo_4">Operadores lógicos</h4>
         <ul>
           <li>
             <b>&&</b>
@@ -345,7 +344,7 @@
         </table>
       </article>
       <article>
-        <h4>Sentencia Switch (o de selección múltiple)</h4>
+        <h4 class="subTitulo_4">Sentencia Switch (o de selección múltiple)</h4>
         <p>
           Es una instrucción de selección que elige una sola acción de una lista de opciones en función de una coincidencia de distintos patrones de expresión. La cláusula default es optativa.
         </p>
@@ -355,12 +354,12 @@
     <!--*************************************************************-->
     <section>
       <a name="3.7"></a>
-      <h3 >Estructuras de repetición</h3>
+      <h3 class="subTitulo_3">Estructuras de repetición</h3>
       <article>
         <p>
           Las estructuras de repetición siempre se ejecutan mediante el uso de bucles. Estos permiten que una o varias líneas se ejecuten de forma repetida. Y se repiten mientras que se cumpla la condición de salida.
         </p>
-        <h4>Mientras (While)</h4>
+        <h4 class="subTitulo_4">Mientras (While)</h4>
         <p>
           Mientras CONDICION hacer <br>
             Instrucción_1; <br>
@@ -368,7 +367,7 @@
             ModificarCondición; <br>
           FinMientras; <br>
         </p>
-        <h4>Hacer... mientras (Do... while)</h4>
+        <h4 class="subTitulo_4">Hacer... mientras (Do... while)</h4>
         <p>
           Hacer <br>
             Instrucción_1; <br>
@@ -376,14 +375,14 @@
             ModificarCondición; <br>
           Mientras CONDICION; <br>
         </p>
-        <h4>Para</h4>
+        <h4 class="subTitulo_4">Para</h4>
         <p>
           Para CONDICION <br>
           Instrucción_1; <br>
           Instrucción_2; <br>
           ModificarCondición; <br>
         </p>
-        <h4>Foreach</h4>
+        <h4 class="subTitulo_4">Foreach</h4>
         <p>
           Ejecuta una instrucción o bloque de intrucciones para cada elemento de cientas estructuras de datos como arrays o listas.
         </p>
@@ -393,22 +392,22 @@
     <!--*************************************************************-->
     <section>
       <a name="3.8"></a>
-      <h3 >Estructuras de salto</h3>
+      <h3 class="subTitulo_3">Estructuras de salto</h3>
       <article>
         <p>
           Son aquellas que detienen la ejecución de alguna de las sentencias de control de nuestro programa.
         </p>
-        <h4>break</h4>
+        <h4 class="subTitulo_4">break</h4>
         <p>
           Interrumpe el bucle indicando que debe continuar a partir de la siguiente sentencia después del bloque del ciclo. <br>
           El control se devuelve a la instrucción que haya a continuación de la intrucción finalizada.
         </p>
       </article>
-      <h4>continue</h4>
+      <h4 class="subTitulo_4">continue</h4>
       <p>
         Se utiliza en sentencias repetitivas con bucles for, foreach, while y do...while. Transfiere el control a la siguiente iteración.
       </p>
-      <h4>return</h4>
+      <h4 class="subTitulo_4">return</h4>
       <p>
         Esta estructura de salto obliga a que finalice la ejecución de una determinada función. Se utiliza para devolver el control a la función de llamada.
       </p>
@@ -417,12 +416,12 @@
     <!--*************************************************************-->
     <section>
       <a name="3.9"></a>
-      <h3 >Tratamiento de cadenas</h3>
+      <h3 class="subTitulo_3">Tratamiento de cadenas</h3>
       <article>
         <p>
           Una cadena es un objeto de tipo string. Se utiliza la palabra reservada string. Siempre que queramos escribir combinaciones alfanuméricas, irán entre comillas dobles, ya que el compilador las tomará como un tipo string.
         </p>
-        <h4>new</h4>
+        <h4 class="subTitulo_4">new</h4>
         <p>
           El operador new crea una nueva instancia de un tipo. <br>
           La palabra new crea un objeto tipo string al que pasamos el parámetro letras como una tabla de caracteres. <br>
@@ -495,7 +494,7 @@
     <!--*************************************************************-->
     <section>  
       <a name="3.10"></a>
-      <h3 >Depuración de errores</h3>
+      <h3 class="subTitulo_3">Depuración de errores</h3>
       <article>
         <p>
           Llegados a esta etapa, nuestro objetivo será descubrir todos los errores que existan e intentar solucionarlos de la mejor forma posible. <br>
@@ -520,13 +519,13 @@
     <!--*************************************************************-->
     <section>
       <a name="3.11"></a>
-      <h3 >Documentación de programas</h3>
+      <h3 class="subTitulo_3">Documentación de programas</h3>
       <article>
         <p>
           Debemos elaborar una memoria para que quede registrado todo el desarrollo que hemos llevado a cabo, los fallos que ha presentado y cómo hemos conseguido solventarlos. <br>
           Los ficheros deben estar testeados y funcionar correctamente.
         </p>
-        <h4>summary</h4>
+        <h4 class="subTitulo_4">summary</h4>
         <p>
           La etiqueta summary debe usarse para describir un tipo y para agregar información adicional dentro de nuestro código.
         </p>
@@ -536,7 +535,7 @@
     <!--*************************************************************-->
     <section>
       <a name="3.12"></a>
-      <h3 >Entornos de desarrollo de programas</h3>
+      <h3 class="subTitulo_3">Entornos de desarrollo de programas</h3>
       <article>
         <p>
           Podemos denominar entorno de desarrollo integrado (IDE), al entorno de programación que hemos utilizado para su realización: editor de código, compilador, depurador e interfaz gráfica. <br>
