--- a/daw/proUno/programUno.html
+++ b/daw/proUno/programUno.html
@@ -32,7 +32,7 @@
   <!--*************************************************************--> 
   <section>
     <div class="indice">
-      <h3>Índice</h3>
+      
       <ol>
         <li><a href="#1.1">Representaciones gráficas</a></li>
         <li><a href="#1.2">Características de los diagramas de flujo</a></li>
@@ -46,7 +46,7 @@
   </section>
   <!--*************************************************************-->
   <section>
-    <h3 >Introducción</h3>
+    <h3 class="subTitulo_3">Introducción</h3>
     <article>
       <p>
         Un programa es un conjunto de instrucciones dadas al ordenador
@@ -61,7 +61,7 @@
         por un ordenador.
       </p>
     </article>
-    <h4>Caractéristicas de un programa:</h4>
+    <h4 class="subTitulo_4">Caractéristicas de un programa:</h4>
     <article>
       <ul>
         <li>Deber ser finito: formado por un conjunto limitado de
@@ -87,7 +87,7 @@
     <!--*************************************************************-->
   <section>
     <a name="1.1"></a>
-    <h3 >Representaciones gráficas</h3>
+    <h3 class="subTitulo_3">Representaciones gráficas</h3>
     <article>
       <p>Para representar un algoritmo, podemos utilizar dos
         herramientas gráficas: los diagramas de flujo y el pseudocódigo.</p>
@@ -95,7 +95,7 @@
         proceso. Cada paso del proceso se representa con un símbolo
         diferente que contiene una breve descripción.</p>
     </article>
-    <h4>Debemos usar una serie de símbolos:</h4>
+    <h4 class="subTitulo_4">Debemos usar una serie de símbolos:</h4>
     <article>
       <ul>
         <li>Rectángulo esquinas redondas: Indican inicio o fin de programa.</li>
@@ -114,7 +114,7 @@
     <!--*************************************************************-->
   <section>
     <a name="1.2"></a>
-    <h3 >Características de los diagramas de flujo</h3>
+    <h3 class="subTitulo_3">Características de los diagramas de flujo</h3>
     <article>
       <ul>
         <li>Deben escribirse de arriba abajo o de izquierda a derecha.</li>
@@ -132,7 +132,7 @@
     <!--*************************************************************-->
   <section>
     <a name="1.3"></a>
-    <h3 >Características del pseudocódigo</h3>
+    <h3 class="subTitulo_3">Características del pseudocódigo</h3>
     <article>
       <ul>
         <li>Comienza con la palabra algoritmo seguido de su nombre.</li>
@@ -147,7 +147,7 @@
     <!--*************************************************************-->
   <section>
     <a name="1.4"></a>
-    <h3 >Comunicación de un sistema informático</h3>
+    <h3 class="subTitulo_3">Comunicación de un sistema informático</h3>
     <article>
       <p>En el proceso de programación se comunica a un usuario con una máquina, se necesita:</p>
     </article>
@@ -167,7 +167,7 @@
     <!--*************************************************************-->
   <section>
     <a name="1.5"></a>
-    <h3 >Características del lenguaje de alto nivel</h3>
+    <h3 class="subTitulo_3">Características del lenguaje de alto nivel</h3>
     <article>
       <ul>
         <li>Es totalmente independiente de la máquina y muy portable.</li>
@@ -181,7 +181,7 @@
     <!--*************************************************************-->
   <section>  
     <a name="1.6"></a>
-    <h3 >Características del lenguaje de bajo nivel</h3>
+    <h3 class="subTitulo_3">Características del lenguaje de bajo nivel</h3>
     <article>
       <ul>
         <li>Está relacionado con las características del hardware.</li>
@@ -197,12 +197,12 @@
     <!--*************************************************************-->
   <section>
     <a name="1.7"></a>
-    <h3 >Lenguajes compilados e interpretados</h3>
+    <h3 class="subTitulo_3">Lenguajes compilados e interpretados</h3>
     <article>
       <p>Los compilados son como su nombre indica aquellos que utilizan un compilador para traducirlos al lenguaje máquina.</p>
       <p>En los interpretados se efectúa directamente la traducción y ejecución simultáneamente para cada una de las sentencias. Un intérprete verifica cada línea cuando se escribe. La ejecución es más lenta debido a esta traducción simultánea.</p>
     </article>
-    <h4>Características de C#</h4>
+    <h4 class="subTitulo_4">Características de C#</h4>
     <article>
       <ul>
         <li>Orientado a objetos</li>
@@ -214,7 +214,7 @@
         <li>Genera un código intermedio llamado MSIL y ese código se vuelve a compilar para obtener el formato nativo en la máquina.</li>
       </ul>
     </article>
-    <h4>Características de Java</h4>
+    <h4 class="subTitulo_4">Características de Java</h4>
     <article>
       <ul>
         <li>Orientado a objetos</li>
