--- a/daw/sistemas/temaCuatro.html
+++ b/daw/sistemas/temaCuatro.html
@@ -33,7 +33,7 @@
   <!--*************************************************************-->
   <section>
     <div class="indice">
-      <h3>Índice</h3>
+      
       <ol>
         <li><a href="#4.1">Estructura cliente-servidor</a></li>
         <li><a href="#4.2">Protocolo LDAP</a></li>
@@ -52,13 +52,13 @@
   <!--*************************************************************-->
   <section>
     <a name="4.1"></a>
-    <h3>Introducción</h3>
+    <h3 class="subTitulo_3">>Introducción</h3>
     <article>
       <p>
         Mediante la Administración dominios podemos centralizar, simplificar y agilizar muy significativamente las tareas de gestión. Crear un dominio en un equipo servidor al que se conecten equipos cliente resulta muy práctico para administrar redes.
       </p>
     </article>
-    <h3 >Estructura cliente-servidor</h3>
+    <h3 class="subTitulo_3">Estructura cliente-servidor</h3>
     <article>
       <p>
         Este modelo de comunicación es bastante sencillo, ya que apartir de un equipo cliente, se necesita otro equipo servidor para que este realice aquellas funciones que tiene asignadas.
@@ -84,7 +84,7 @@
   <!--*************************************************************-->
   <section>
     <a name="4.2"></a>
-    <h3 >Protocolo LDAP</h3>
+    <h3 class="subTitulo_3">Protocolo LDAP</h3>
     <article>
       <p>
         Consideramos LDAP(Lightweight Directory Access Protocol) como un protocolo ligero de acceso a directorios. Se utiliza especialmente en las empresas, se emplea para acceder a servicios de directorio.
@@ -136,7 +136,7 @@
   <!--*************************************************************-->
   <section>
     <a name="4.3"></a>
-    <h3 >Concepto de dominio. Subdominios. Requisitos necesarios para montar un dominio</h3>
+    <h3 class="subTitulo_3">Concepto de dominio. Subdominios. Requisitos necesarios para montar un dominio</h3>
     <article>
       <p>
         Dependiendo de si estamos hablando de redes en sentido general o bien de internet podemos encontrar dos deficiones diferentes.
@@ -214,7 +214,7 @@
       </p>
     </article>
     <article>
-      <h4>Requisitos para la creación de un dominio en internet</h4>
+      <h4 class="subTitulo_4">Requisitos para la creación de un dominio en internet</h4>
       <p>
         Debemos contratar el servicio con una empresa. La administración se lleva a cabo de manera remota, a través del navegador web.
       </p>
@@ -224,7 +224,7 @@
   <!--*************************************************************-->
   <section>
     <a name="4.4"></a>
-    <h3 >Conceptos clave de Active Directory</h3>
+    <h3 class="subTitulo_3">Conceptos clave de Active Directory</h3>
     <article>
       <p>
         Es una herramienta de Microsoft para gestionar servidores y administrar en ellos usuarios, grupos, etc.. Podemos gestionar los inicios de sesión de los equipos conectados a la red, definir políticas, etc.
@@ -305,7 +305,7 @@
   <!--*************************************************************-->
   <section>
     <a name="4.5"></a>
-    <h3 >Administración de cuentas. Cuentas predeterminadas</h3>
+    <h3 class="subTitulo_3">Administración de cuentas. Cuentas predeterminadas</h3>
     <article>
       <p>
         En aplicaciones como AD nos interesa generar cuentas de usuario para asignarlas a las distintas personas que van acceder a la red. A nivel interno, las cuentas de usuario son elementos de una base de datos de directorio a los que se les asigna de forma automatizada unos identificadores para garantizar la seguridad. Tras dar de alta a los usuarios, estos pueden acceder y utilizar los recursos del dominio que tengan asignados.
@@ -351,7 +351,7 @@
   <!--*************************************************************-->
   <section>
     <a name="4.6"></a>
-    <h3 >Contraseñas. Bloqueos de cuenta. Cuentas de usuarios y equipos</h3>
+    <h3 class="subTitulo_3">Contraseñas. Bloqueos de cuenta. Cuentas de usuarios y equipos</h3>
     <article>
       <p>
         A los usuarios dados de alta se les asignarán distintos privilegios, por lo que es vital que le asignemos contraseñas seguras.
@@ -382,7 +382,7 @@
   <!--*************************************************************-->
   <section>
     <a name="4.7"></a>
-    <h3 >Perfiles móviles y obligatorios</h3>
+    <h3 class="subTitulo_3">Perfiles móviles y obligatorios</h3>
     <article>
       <p>
         Los perfiles de usuario nos permiten asignar a los usuarios del sistema características como los archivos y carpetas que utilizarán y la configuración de su escritorio. Toda esa información se lee y se carga cada vez que un usuario inicia sesión.
@@ -410,7 +410,7 @@
   <!--*************************************************************-->
   <section>
     <a name="4.8"></a>
-    <h3 >Carpetas personales</h3>
+    <h3 class="subTitulo_3">Carpetas personales</h3>
     <article>
       <p>
         Cada usuario puede almacenar su información personal en una subcarpeta propia. Esta tendra el nombre del propio usuario y es frecuente que aparezca en los equipos cliente como una unidad de red. 
@@ -427,7 +427,7 @@
   <!--*************************************************************-->
   <section>
     <a name="4.9"></a>
-    <h3 >Plantillas de usuario. Variables de entorno</h3>
+    <h3 class="subTitulo_3">Plantillas de usuario. Variables de entorno</h3>
     <article>
       <p>
         Se utilizan para ahorrarnos una gran cantidad de trabajo. Nos permiten definir una serie de características comunes que posteriormente podemos aplicar a un gran número de usuarios.
@@ -470,7 +470,7 @@
   <!--*************************************************************-->
   <section>
     <a name="4.10"></a>
-    <h3 >Administración de grupos. Tipo. Estrategias de anidamiento. Grupos predeterminados</h3>
+    <h3 class="subTitulo_3">Administración de grupos. Tipo. Estrategias de anidamiento. Grupos predeterminados</h3>
     <article>
       <p>
         Si la empresa u organización cuya red administramos tiene un elevado número de departamentos y usuarios es fundamental que planeemos una estrategia para estructurarla en grupos.
@@ -529,7 +529,7 @@
   <!--*************************************************************-->
   <section>
     <a name="4.11"></a>
-    <h3 >Instalación de Windows Server y Ubuntu Server</h3>
+    <h3 class="subTitulo_3">Instalación de Windows Server y Ubuntu Server</h3>
     <article>
       <p>Empecemos por Windows Server 2019:</p>
       <ol>
