--- a/daw/sistemas/temaDos.html
+++ b/daw/sistemas/temaDos.html
@@ -33,7 +33,7 @@
   <!--*************************************************************-->
   <section>
     <div class="indice">
-      <h3>Índice</h3>
+      
       <ol>
         <li><a href="#2.1">Administración de usuarios y grupos locales</a></li>
         <li><a href="#2.2">Seguridad de cuentas de usuario</a></li>
@@ -48,7 +48,7 @@
   </section>
   <!--*************************************************************-->
   <section>
-    <h3 >Introducción</h3>
+    <h3 class="subTitulo_3">Introducción</h3>
     <article>
       <p>El <b>software base</b> es el programa encargado de controlar el ordenador.</p>
     </article>
@@ -56,7 +56,7 @@
   <!--*************************************************************-->
   <section>
     <a name="2.1"></a>
-    <h3 >Administración de usuarios y grupos locales</h3>
+    <h3 class="subTitulo_3">Administración de usuarios y grupos locales</h3>
     <article>
       <p>Mediante las cuentas de usuario se identifica y autentifica un individuo con el sistema. En un mismo equipo pueden trabajar varias personas, con su propio espacio de trabajo.</p>
       <p>El usuario administrador es el encargado de dar acceso a los usuarios y controlar todas las operaciones, este usuario no tiene límites cuando trabaja sobre el sistema.</p>
@@ -129,7 +129,7 @@
   <!--*************************************************************-->
   <section>
     <a name="2.2"></a>
-    <h3 >Seguridad de cuentas de usuario</h3>
+    <h3 class="subTitulo_3">Seguridad de cuentas de usuario</h3>
     <article>
       <p>Si únicamente nosotros tenemos acceso a un equipo es habitual que lo hagmos como administrador, teneiendo todos los permisos. Es importante que iniciemos sesión con dicha cuenta o con otras que nos birnden permisos avanzados si las operaciones lo requieren. Para maximizar la seguridad debemos tener en cuenta las siguientes pautas:</p>
     </article>
@@ -149,7 +149,7 @@
   <!--*************************************************************-->
   <section>
     <a name="2.3"></a>
-    <h3 >Seguridad de contraseñas</h3>
+    <h3 class="subTitulo_3">Seguridad de contraseñas</h3>
     <article>  
       <p>Las contraseñas son clave para proteger las cuentas de usuario y la información que se almacena en el equipo, cuanto más segura sea una contraseña, mayor protección nos ofrecerá.</p>
       <p>Los S.O. ofrecen al administrador la posibilidad de establecer cuáles serán las características de las contraseñas.</p>
@@ -184,7 +184,7 @@
   <!--*************************************************************-->
   <section>
     <a name="2.4"></a>
-    <h3 >Configuración del protocolo TCP/IP. Direcciones IP y máscaras de subred</h3>
+    <h3 class="subTitulo_3">Configuración del protocolo TCP/IP. Direcciones IP y máscaras de subred</h3>
     <article>
       <p>La <b>dirección IP</b> constituye el concepto fundamental en para configurar debidamente el servidor de redes. Con ella podemos identificar a cada equipo y consta siempre de cuatro números enteros de 4 bytes separados por puntos que pueden oscilar entre 0 y 255.</p>
       <p>Su formato sera W.X.Y.Z (192.168.1.21), dentro du una misma red no pueden existir dos direcciones IP iguales.</p>
@@ -229,14 +229,14 @@
         <li><b>Clase C:</b> 8 bits para direccionar hosts -> 2<sup>8</sup> - 2 hosts</li>
       </ul>
     </article>
-    <h4>Conceptos asociados a la IP</h4>
+    <h4 class="subTitulo_4">Conceptos asociados a la IP</h4>
     <article>
       <ul>
         <li><b>IP privada:</b> Es la dirección que posee cada equipo o dispositivo que se conecta a nuestra red a través del protocolo TCP/IP. Podemos asignarla nosotros o hacer que se asigne automáticamente a través del DHCP.</li>
         <li><b>IP pública:</b> Es la dirección que usamos para identificarnos en la red cuando nos conectarmos a otras redes externas, como internet. Nos la asigna el proveedor de internet, no se puede configurar.</li>
       </ul>
     </article>
-    <h4>Las IP públicas que nos asignan los ISP pueden ser:</h4>
+    <h4 class="subTitulo_4">Las IP públicas que nos asignan los ISP pueden ser:</h4>
     <article>
       <ul>
         <li><b>Estáticas:</b> La IP es fija, siempre es la misma. Este servicio suelen cobrarlo ya que nos permite mayor control y nos da la posibilidad de asignar un nombre de dominio (www.dominio.com).</li>
@@ -251,7 +251,7 @@
   <!--*************************************************************-->
   <section>
     <a name="2.5"></a>
-    <h3 >Servicio de Nombres de Dominios (DNS)</h3>
+    <h3 class="subTitulo_3">Servicio de Nombres de Dominios (DNS)</h3>
     <article>
       <p>Los servidores DNS son muy importantes, estos tienen la misión de evitar recordar la IP del equipo al que nos conectamos. Es el servidor DNS el que relaciona el nombre escrito (www.google.es) con la ip (142.250.200.68) que tiene alojada la página que queremos visualizar.</p>
       <p>Para comprobar el estado de los servidores DNS en un equipo se realiza habitualmente por consola de comandos y a que es la forma más sencilla y rápida.</p>
@@ -264,7 +264,7 @@
   <!--*************************************************************-->
   <section>
   <a name="2.6"></a>
-    <h3 >Archivos de configuración de red</h3>  
+    <h3 class="subTitulo_3">Archivos de configuración de red</h3>  
     <article>  
       <p>Toda la comunicación en red sigue el modelo TCP/IP. Como protocolo, rige las normas al realizar este proceso de comunicación.</p>
       <p>La configuración de nuestro equipo se realiza a través del Panel de control:</p>
@@ -284,15 +284,15 @@
   <!--*************************************************************-->
   <section>
   <a name="2.7"></a>
-    <h3 >Optimización de sistemas para ordenadores portátiles. Archivos de red sin conexión</h3>  
-    <h4>Los pórtatiles poseen unas características propias que debemos tener en cuenta:</h4>
+    <h3 class="subTitulo_3">Optimización de sistemas para ordenadores portátiles. Archivos de red sin conexión</h3>  
+    <h4 class="subTitulo_4">Los pórtatiles poseen unas características propias que debemos tener en cuenta:</h4>
     <article>
       <ul>
         <li><b>Mayor vulnerabilidad:</b> Por su movilidad fuera de casa u oficina resulta más vulnerable a intrusiones. Si nos conectamos a una red inalámbica se duplica. E incluso debemos tener en cuenta que pueden llegar a caer en manos inadecuadas.</li>
         <li><b>Menos rendimiento y otras características:</b> Aunque los equipos de última generación están equiparandose a los sobremesa, los de gama baja y los más antiguos el rendimiento es menor.</li>
       </ul>
     </article>
-    <h4>Por esto es conveniente aplicar mayor seguirdad:</h4>
+    <h4 class="subTitulo_4">Por esto es conveniente aplicar mayor seguirdad:</h4>
     <article>
       <ul>
         <li><b>Habilitar contraseñas adicionales:</b> Además de la contraseña de inicio de sesión, podemos habilitar la de la BIOS e instalar software adicional para proteger archivos y carpetas.</li>
@@ -300,7 +300,7 @@
         <li><b>Encriptación de unidades de disco:</b> El sistema de cifrado de unidad BitLocker de Windows permiten encriptar discos para que no sean accesibles sin contraseña.</li>
       </ul>
     </article>
-      <h4>En cuanto los portátiles de gama baja podemos optimizar el sistema con algunos cambios en su configuración:</h4>
+      <h4 class="subTitulo_4">En cuanto los portátiles de gama baja podemos optimizar el sistema con algunos cambios en su configuración:</h4>
     <article>
       <ul>
         <li>Desactivar los sonidos del sistema</li>
@@ -317,7 +317,7 @@
   <!--*************************************************************-->
   <section>
   <a name="2.8"></a>
-    <h3 >Principales comandos de sistemas operativos libres y propietarios</h3>  
+    <h3 class="subTitulo_3">Principales comandos de sistemas operativos libres y propietarios</h3>  
     <article>
       <p>Existen una serie de comandos que nos ofrecen la posibilidad de movernos y gestionar los S.O. Es conveniente conocer los más utilizados:</p>
     </article>
