--- a/daw/sistemas/temaTres.html
+++ b/daw/sistemas/temaTres.html
@@ -33,7 +33,7 @@
   <!--*************************************************************-->
   <section>
     <div class="indice">
-      <h3>Índice</h3>
+      
       <ol>
         <li><a href="#3.1">Sistemas de archivos</a></li>
         <li><a href="#3.2">Tipos de sistemas de archivos</a></li>
@@ -52,13 +52,13 @@
   <!--*************************************************************-->
   <section>
     <a name="3.1"></a>
-    <h3 >Introducción</h3>
+    <h3 class="subTitulo_3">Introducción</h3>
     <article>
       <p>
         Podemos administrar y organizar la información gracias a los sistemas de archivos, además de administrar las prticiones de los dispositivos de almacenamiento, automatizar tareas y utilizar comodines y herramientas de búsqueda.
       </p>
     </article>
-    <h3 >Sistema de archivos</h3>
+    <h3 class="subTitulo_3">Sistema de archivos</h3>
     <article>
       <p>
         El sistema de archivos es el área del S.O. que se ocupa de gestionar la utilización de los medios para almacenar la información. Los datos que guardamos se representan en modo textual o gráfico. Utilizando un gestor de archivos podemos administrar estos medios con gran facilidad.
@@ -83,7 +83,7 @@
       </p>
     </article>
     <article>
-      <h3>Los Archivos</h3>
+      <h3 class="subTitulo_3">>Los Archivos</h3>
       <p>
         Son un mecanismo de almacenar información y volver a leerla. Tenemos dos grupos los ejecutables y los no ejecutables o archivos de datos. Su diferencia  es que los ejecutables pueden funcionar por ellos mismos y los datos necesitan un programa para ser utilizados.
       </p>
@@ -92,7 +92,7 @@
       </p>
     </article>
     <article>
-      <h3>Los Directorios</h3>
+      <h3 class="subTitulo_3">>Los Directorios</h3>
       <p>
         Son considerados una división lógica, forman una estructura jerárquica, en la que el usuario pueda buscar o crear archivos en esa ruta. En esa estructura de árbol, existe un directorio raíz (root), que engloba el resto de los directorios y archivos.
       </p>
@@ -102,7 +102,7 @@
   <!--*************************************************************-->
   <section>
     <a name="3.2"></a>
-    <h3 >Tipos de sitemas de archivos</h3>
+    <h3 class="subTitulo_3">Tipos de sitemas de archivos</h3>
     <article>
       <p>
         Existen muchos sistemas de archivos distintos, los que usaremos más habitualmente son los siguientes:
@@ -140,7 +140,7 @@
   <!--*************************************************************-->
   <section>
     <a name="3.3"></a>
-    <h3 >Gestión de sitemas de archivos mediante comandos y entornos gráficos</h3>
+    <h3 class="subTitulo_3">Gestión de sitemas de archivos mediante comandos y entornos gráficos</h3>
     <article>
       <p>
         El gestor de archivos viene predefinido entre las aplicaciones básicas, que son los programas encargados de localizar archivos, sean propios o del S.O.
@@ -218,7 +218,7 @@
   <!--*************************************************************-->
   <section>
     <a name="3.4"></a>
-    <h3 >Gestión de enlaces</h3>
+    <h3 class="subTitulo_3">Gestión de enlaces</h3>
     <article>
       <p>
         Los navegadores web nos dan la opción de guardar el enlace a una página que nos interese y poder asi acceder a ella más tarde.
@@ -260,7 +260,7 @@
   <!--*************************************************************-->
   <section>
     <a name="3.5"></a>
-    <h3 >Estructura de directorios de sistemas operativos libres y propietarios</h3>
+    <h3 class="subTitulo_3">Estructura de directorios de sistemas operativos libres y propietarios</h3>
     <article>
       <p>
         La estructura de árbol facilita la labor de los usuarios siempre que dispongamos de privilegios, podmeos modificarla generando nuevas carapetas, eliminando otras, etc..
@@ -393,7 +393,7 @@
   <!--*************************************************************-->
   <section>
     <a name="3.6"></a>
-    <h3 >Búsqueda de información del sistema mediante comandos y herramientas gráficas</h3>
+    <h3 class="subTitulo_3">Búsqueda de información del sistema mediante comandos y herramientas gráficas</h3>
     <article>
       <p>
         A veces nos vemos obligados a buscar un determinado archivo o directorio, para ello podemos utilizar diferentes comandos o una interfaz gráfica. Es muy importante que nos dominemos los comodines. Estos símbolos sirven para replazar cadenas de caracteres.
@@ -430,7 +430,7 @@
   <!--*************************************************************-->
   <section>
     <a name="3.7"></a>
-    <h3 >Identificación del software instalado mediante comandos y herramientas gráficas</h3>
+    <h3 class="subTitulo_3">Identificación del software instalado mediante comandos y herramientas gráficas</h3>
     <article>
       <p>
         Para determinar qué software tenemos instalado en un equipo, podemos acceder a Programas y características (Windows). También podemos examinar los programas instalados usando comandos. Buscando con la consola la carpeta Archivos de programa y usar el comando DIR para listar el directorio.
@@ -444,7 +444,7 @@
   <!--*************************************************************-->
   <section>
     <a name="3.8"></a>
-    <h3 >Gestión de la información del sistema. Rendimiento. Estadística</h3>
+    <h3 class="subTitulo_3">Gestión de la información del sistema. Rendimiento. Estadística</h3>
     <article>
       <p>
         Para cuantificar el rendimiento de nuestro equipo en windows tenemos que ir a Propiedades de Equipo. Hacer clic en Evaluación de la experiencia en Windows. Otras herramientas complementarias como el Monitor de rendimiento.
@@ -464,7 +464,7 @@
   <!--*************************************************************-->
   <section>
     <a name="3.9"></a>
-    <h3 >Montaje y desmontaje de dispositivos en sistemas operativos</h3>
+    <h3 class="subTitulo_3">Montaje y desmontaje de dispositivos en sistemas operativos</h3>
     <article>
       <p>
         El montaje/desmontaje de dispositivos es una técnica de administración de discos.
@@ -487,7 +487,7 @@
   <!--*************************************************************-->
   <section>
     <a name="3.10"></a>
-    <h3 >Automatización</h3>
+    <h3 class="subTitulo_3">Automatización</h3>
     <article>
       <p>
         Existen una serie de tareas rutinarias a realizar con regularidad. Existe la posibilidad de automatizarlas para que se ejecuten sin estar pendientes de ellas. Hay dos casos en lo que resulta interesante.
@@ -532,7 +532,7 @@
   <!--*************************************************************-->
   <section>
     <a name="3.11"></a>
-    <h3 >Herramientas de administración de discos. Particiones y volúmenes. Desfragmentación y revisión</h3>
+    <h3 class="subTitulo_3">Herramientas de administración de discos. Particiones y volúmenes. Desfragmentación y revisión</h3>
     <article>
       <p>
         Una unidad física de disco puede dividirse en varias particiones, cada una con un sistema de ficheros diferentes. Estas pueden definirse en el momento de instalar el S.O. o pueden generarse y modificarse desde el propio sistema.
