--- a/daw/proUno/proCuatro.html
+++ b/daw/proUno/proCuatro.html
@@ -32,7 +32,7 @@
   <!--*************************************************************--> 
   <section>
     <div class="indice">
-      <h3>Índice</h3>
+      
       <ol>
         <li><a href="#4.1">Concepto</a></li>
         <li><a href="#4.2">Ventajas e inconvenientes</a></li>
@@ -50,7 +50,7 @@
   <!--*************************************************************-->
   <section>
     <a name="4.1"></a>
-    <h3 >Concepto</h3>
+    <h3 class="subTitulo_3">Concepto</h3>
     <article>
       <p>
         Consiste en dividir el problema original en diversos subproblemas, que se pueden resolver por separado, para después, recomponer los resultados y obtener la solución al problema.
@@ -64,9 +64,9 @@
     <!--*************************************************************-->
   <section>
     <a name="4.2"></a>
-    <h3 >Ventajas e inconvenientes</h3>
+    <h3 class="subTitulo_3">Ventajas e inconvenientes</h3>
     <article>
-      <h4>Ventajas:</h4>
+      <h4 class="subTitulo_4">Ventajas:</h4>
       <ul>
         <li>Facilita el mantenimiento, la modificación y la documentación</li>
         <li>Escritura y testing</li>
@@ -75,7 +75,7 @@
       </ul>
     </article>
     <article>
-      <h4>Inconvenientes:</h4>
+      <h4 class="subTitulo_4">Inconvenientes:</h4>
       <ul>
         <li>¿Cuánto hay que dividir nuestro problema?</li>
         <li>Aumenta el uso de memoria y el tiempo de ejecución</li>
@@ -86,14 +86,14 @@
     <!--*************************************************************-->
   <section>  
     <a name="4.3"></a>
-    <h3 >Análisis descendente (top down)</h3>
+    <h3 class="subTitulo_3">Análisis descendente (top down)</h3>
     <article>
       <p>
         Es una técnica que permite diseñar la solución de un problema con base en la modularización o segmentación, dándole un enfoque de arriba hacia abajo (top down). Se divide en módulos que se estructuran e integran jerárquicamente.
       </p>
     </article>
     <article>
-      <h4>Divide y vencerás:</h4>
+      <h4 class="subTitulo_4">Divide y vencerás:</h4>
       <ul>
         <ul>
           <li>Va de lo más general a lo más específico</li>
@@ -107,7 +107,7 @@
     <!--*************************************************************-->
   <section>
     <a name="4.4"></a>
-    <h3 >Modulación de programas. Subprogramas</h3>
+    <h3 class="subTitulo_3">Modulación de programas. Subprogramas</h3>
     <article>
       <p>
         Denominamos módulos como subprogramas, las diferentes partes del problema que puede resolverse de forma independiente. Al ser independientes permiten que podamos centrarnos en una de sus partes. Ofrecen la posibilidad de que se puedan utilizar las soluciones obtenidas en otras partes del programa.
@@ -117,7 +117,7 @@
       </p>
     </article>
     <article>
-      <h4>Función Main</h4>
+      <h4 class="subTitulo_4">Función Main</h4>
       <p>
         Todos los programas en C# tienen una función principal llamada main() que se ejecuta al iniciar el programa. Esta se encarga de gestionar el flujo de ejecución, llamando a los diferentes módulos si es necesario.
       </p>
@@ -132,9 +132,9 @@
     <!--*************************************************************-->
   <section>
     <a name="4.5"></a>
-    <h3 >Llamadas a funciones (métodos). Tipos y funcionamiento</h3>
+    <h3 class="subTitulo_3">Llamadas a funciones (métodos). Tipos y funcionamiento</h3>
     <article>
-      <h4>Funciones</h4>
+      <h4 class="subTitulo_4">Funciones</h4>
       <p>
         Los métodos con los que trabajamos se denominan funciones. Cuando nos referimos a una función, un método o un subprograma, nos estamos refiriendo al mismo concepto.
       </p>
@@ -149,7 +149,7 @@
       </p>
     </article>
     <article>
-      <h4>Vemos el significado de cada parte:</h4>
+      <h4 class="subTitulo_4">Vemos el significado de cada parte:</h4>
       <ul>
         <li>
           <b>Modificadores:</b> conjunto de palabras reservadas que modifican o aplican propiedades a la función.
@@ -172,7 +172,7 @@
       </p>
     </article>
     <article>
-      <h4>Métodos no tipados (Void)</h4>
+      <h4 class="subTitulo_4">Métodos no tipados (Void)</h4>
       <p>
         Son aquellos que realizan una tarea específica y que pueden recibir parámetros, pero no necesitan devolver un valor. 
       </p>
@@ -185,21 +185,21 @@
           }
       </p>
     </article>
-    <h4>Paso de parámetros. Paso por valor y paso por referencia</h4>
+    <h4 class="subTitulo_4">Paso de parámetros. Paso por valor y paso por referencia</h4>
     <article>
-      <h4>Por valor</h4>
+      <h4 class="subTitulo_4">Por valor</h4>
       <p>
         Cuando ejecutamos una función que tiene parámetros pasados por valor, se realiza una copia del parámetro que se ha pasado, que todas las modificaciones y cambios que se realicen se están haciendo en esta copia que ha creado. El original no se modifica.
       </p>
     </article>
     <article>
-      <h4>Por referencia</h4>
+      <h4 class="subTitulo_4">Por referencia</h4>
       <p>
         Cuando los párametros son pasados por referencia todas aquellas modificaciones que se realicen en la función van a afectar a sus parámetros, ya que se trabaja con los originales.
       </p>
     </article>
     <article>
-      <h4>params, in y out</h4>
+      <h4 class="subTitulo_4">params, in y out</h4>
       <p>
         La palabra clave 'params' especifica un paso por valor. No se permiten pasar más parámetros después de la palabra clave 'params' en una declaración de método. Si el tipo declarado del parametro no es el mismo, se producirá un error.
       </p>
@@ -215,9 +215,9 @@
     <!--*************************************************************-->
   <section>
     <a name="4.6"></a>
-    <h3 >Ámbito de las llamadas a funciones</h3>
+    <h3 class="subTitulo_3">Ámbito de las llamadas a funciones</h3>
     <article>
-      <h4>Variables globales</h4>
+      <h4 class="subTitulo_4">Variables globales</h4>
       <p>
         Una variable global es creada fuera de nuestro Main y fuera de cualquier método. Podemos acceder a ella en cualquier momento de nuestro programa.
       </p>
@@ -229,13 +229,13 @@
       </p>
     </article>
     <article>
-      <h4>Variables locales</h4>
+      <h4 class="subTitulo_4">Variables locales</h4>
       <p>
         Se declaran dentro de un método, y solo este fragmento de código las conocerá. No se podrán usar desde ningún otro método del programa.
       </p>
     </article>
     <article>
-      <h4>Conflictos de nombres en las variables</h4>
+      <h4 class="subTitulo_4">Conflictos de nombres en las variables</h4>
       <p>
         ¿Que ocurre si trabajamos con la misma variable global en dos métodos diferentes?
       </p>
@@ -248,7 +248,7 @@
     <!--*************************************************************-->
   <section>
     <a name="4.7"></a>
-    <h3 >Prueba, depuración y comentarios de programas</h3>
+    <h3 class="subTitulo_3">Prueba, depuración y comentarios de programas</h3>
     <article>
       <p>
         Una vez terminado el programa es momento de probarlo para comprobar que no tiene fallos y su funcionamiento es correcto. En muchos casos no existen errores, pero el programa no realiza la tarea que debería.
@@ -266,7 +266,7 @@
       </p>
     </article>
     <article>
-      <h4>Cuando ejecutamos un programa, podemos dividir el proceso en varias partes:</h4>
+      <h4 class="subTitulo_4">Cuando ejecutamos un programa, podemos dividir el proceso en varias partes:</h4>
       <ul>
         <li>Compilación</li>
         <li>Vinculación</li>
@@ -274,7 +274,7 @@
       </ul>
     </article>
     <article>
-      <h4>Veamos cómo funcionan cada una de estas etapas:</h4>
+      <h4 class="subTitulo_4">Veamos cómo funcionan cada una de estas etapas:</h4>
       <ul>
         <li>
           <b>Compilación</b>
@@ -300,7 +300,7 @@
     <!--*************************************************************-->
   <section>
     <a name="4.8"></a>
-    <h3 >Concepto de librerías</h3>
+    <h3 class="subTitulo_3">Concepto de librerías</h3>
     <article>
       <p>
         Librerías son archivos que nos permiten llevar a cabo diferentes acciones y tareas sin necesidad de que el programador se preocupe de cómo están desarrolladas, solo entender cómo utilizarlas. Nos permiten hacer nuestros programas más modulares y reutilizables, facilitando crear programas con funcionalidades bastante complejas.
@@ -327,7 +327,7 @@
     <!--*************************************************************-->
   <section>
     <a name="4.9"></a>
-    <h3 >Uso de librerías</h3>
+    <h3 class="subTitulo_3">Uso de librerías</h3>
     <article>
       <p>
         Una librería es un conjunto de métodos relacionados con el mismo objetivo para poder ser reutilizado cada vez que el programador lo desee. Ejemplo Math.
@@ -338,7 +338,7 @@
     <!--*************************************************************-->
   <section>
     <a name="4.10"></a>
-    <h3 >Introducción al concepto de recursividad</h3>
+    <h3 class="subTitulo_3">Introducción al concepto de recursividad</h3>
     <article>
       <p>
         Es la llamada de una función a sí misma hasta que se cumpla una determinada condición de salida.
