--- a/daw/sistemas/sistemInfor.html
+++ b/daw/sistemas/sistemInfor.html
@@ -33,7 +33,7 @@
   <!--*************************************************************-->
   <section>
     <div class="indice">
-      <a name="indice"><h3>Índice</h3></a>
+      <a name="indice"></a>
       <ol>
         <li><a href="#1.1">Estructura y componentes de un sistema informático. Periféricos y adaptadores para la conexion de dispositivos</a></li>
         <li><a href="#1.2">Tipos y topologías de red</a></li>
@@ -58,7 +58,7 @@
   <!--*************************************************************-->
   <section>
     <article>
-      <h3 >Introducción</h3>
+      <h3 class="subTitulo_3">Introducción</h3>
         <ul>
           <li><b>Sistema Informático:</b> Es aquel que almacena y procesa información interrelacionando el hardware y software de un ordenador. </li>
           <li><b>Software Libre:</b> Implica que los usuarios podrán modificar, copiar, ejecutar e incluso mejorar dicho programa.</li>
@@ -77,7 +77,7 @@
   <!--*************************************************************-->
   <section>
     <a name="1.1"></a>
-    <h3 >Estructura y componentes de un sistema informático, periféricos y adaptadores para la conexión de dispositivos</h3>
+    <h3 class="subTitulo_3">Estructura y componentes de un sistema informático, periféricos y adaptadores para la conexión de dispositivos</h3>
     <article>
     <article>
       <p>El sistema informático se compone de una parte central (ordenador) y unos dispositivos que facilitan la entrada/salida de informácion (periféricos). Un ordenador está formado por dos tipos de elementos:</p>
@@ -140,7 +140,7 @@
   <!--*************************************************************-->
   <section>
     <a name="1.2"></a>
-    <h3 >Tipos y topologias de red</h3>
+    <h3 class="subTitulo_3">Tipos y topologias de red</h3>
     <article>
       <p>Una red de ordenadores es un conjunto de equipos interconectados entre sí que permiten compartir recursos e información. Es necesario que dispongan de tarjeta de red, cables de conexión, dispositivos perifericos y un software adecuado.</p>
     </article>
@@ -200,7 +200,7 @@
   <!--*************************************************************-->
   <section>
     <a name="1.3"></a>
-    <h3 >Mapa físico y lógico de una red</h3>
+    <h3 class="subTitulo_3">Mapa físico y lógico de una red</h3>
     <article>
       <p>A la hora de crear o modificar una red es muy importante documentar su estructura. Deberá llevarse a cabo en dos frentes.</p>
     </article>
@@ -217,7 +217,7 @@
   <!--*************************************************************-->
   <section>
     <a name="1.4"></a>
-    <h3 >Arquitectura de un Sistema Operativo</h3>
+    <h3 class="subTitulo_3">Arquitectura de un Sistema Operativo</h3>
     <article>
       <p>Los sitemas operativos han evoluciodo de forma notable, las consolas tipo texto han dejado paso a interfaces de tipo gráfico como windows o mac os x.</p>
       <p>Podemos distinguir en la arquitectura los siguientes elementos clave: <br></p>
@@ -235,7 +235,7 @@
   <!--*************************************************************-->
   <section>
     <a name="1.5"></a>
-    <h3 >Funciones del Sistema Operativo</h3>
+    <h3 class="subTitulo_3">Funciones del Sistema Operativo</h3>
     <article>
       <ul>
         <li>Administración de procesos: Decide el orden de procesamientos de los programas que están a la espera, así como asignar los recursos necesarios para su proceso.</li>
@@ -258,7 +258,7 @@
   <!--*************************************************************-->
   <section>
   <a name="1.6"></a>
-  <h3 >Tipos de sistemas operativos</h3>
+  <h3 class="subTitulo_3">Tipos de sistemas operativos</h3>
     <article>
       <p>Entendemos por sistema operativo el software encargado de poner en marcha un ordenador, garantizando su correcto funcionamiento. Es el intermediario entre usuario y hardware. Los podemos clasificar: <br></p>
     </article>
@@ -302,7 +302,7 @@
   <!--*************************************************************-->
   <section>
   <a name="1.7"></a>
-  <h3 >Tipos de aplicaciones</h3>
+  <h3 class="subTitulo_3">Tipos de aplicaciones</h3>
     <article>
       <ul>
         <li>Aplicaciones locales: Se almacenan en la unidad de disco local y solamente este tiene acceso a ellas.</li>
@@ -315,7 +315,7 @@
   <!--*************************************************************-->
   <section>
   <a name="1.8"></a>
-  <h3 >Licencias y tipos</h3>
+  <h3 class="subTitulo_3">Licencias y tipos</h3>
   <h4 >Licencias</h4>
     <article>
       <ul>
@@ -338,7 +338,7 @@
   <!--*************************************************************-->
   <section>
   <a name="1.9"></a>
-  <h3 >Gestores de arranque</h3>
+  <h3 class="subTitulo_3">Gestores de arranque</h3>
     <article>
       <p>Los gestores de arranque son un pequeño programa que se ejecuta una vez iniciada la bios. Prepara los elementos más básicos para que el S.O. funcione.</p>
     </article>
@@ -347,7 +347,7 @@
   <!--*************************************************************-->
   <section>
   <a name="1.10"></a>
-  <h3 >Maquinas virtuales</h3>
+  <h3 class="subTitulo_3">Maquinas virtuales</h3>
     <article>
       <p>Son un software que nos permite instalar S.O. de forma que crea que está instalado en un equipo. Hay dos tipos diferentes, las de sistemas y las de proceso. Emulan un ordenador por completo y ejecutan un S.O. en su interior. <br>Utilizan el hardware instalado en el equipo base, todo funcionará como si de un pc normal se tratase.</p>
       <p>Las de proceso no emulan todo el equipo completo sino que ejecutan un proceso concreto como una aplicación. Son muy útiles para crear aplicaciones para varias plataformas, creando un entorno de ejecución para lidiar con el S.O. y no programar específicamente para un sistema.</p>
@@ -357,7 +357,7 @@
   <!--*************************************************************-->
   <section>
   <a name="1.11"></a>
-  <h3 >Consideraciones previas a la instalación de sistemas operativos libres y propietarios</h3>  
+  <h3 class="subTitulo_3">Consideraciones previas a la instalación de sistemas operativos libres y propietarios</h3>  
   <article>
       <ul>
         <li>Requisitos del hardware: La documentación de los S.O. ofrece características mínimas requeridas.</li>
@@ -370,7 +370,7 @@
   <!--*************************************************************-->
   <section>
   <a name="1.12"></a>
-  <h3 >Instalación de sistemas o requisitos, versiones y licencias</h3>
+  <h3 class="subTitulo_3">Instalación de sistemas o requisitos, versiones y licencias</h3>
   <h4 >Los requisitos principales son:</h4>  
   <article>    
       <ul>
@@ -397,7 +397,7 @@
   <!--*************************************************************-->
   <section>
   <a name="1.13"></a>
-  <h3 >Instalación y desintalación de aplicaciones. Requisitos, versiones y licencias.</h3>  
+  <h3 class="subTitulo_3">Instalación y desintalación de aplicaciones. Requisitos, versiones y licencias.</h3>  
   <article>
       <p>Antes de instalarlas debemos estar seguros de que cumplimos lo especificado en la documentación.</p>
   </article>
@@ -418,7 +418,7 @@
   <!--*************************************************************-->
   <section>
   <a name="1.14"></a>
-  <h3 >Actualización de sistemas operativos y aplicaciones</h3>  
+  <h3 class="subTitulo_3">Actualización de sistemas operativos y aplicaciones</h3>  
   <article>
       <ul>
         <li>Actualización: Instalar la nueva versión sin desinstalar la previa.</li>
@@ -433,7 +433,7 @@
   <!--*************************************************************-->
   <section>
   <a name="1.15"></a>
-  <h3 >Archivos de inicio de S.O.</h3>  
+  <h3 class="subTitulo_3">Archivos de inicio de S.O.</h3>  
   <article>
       <p>Los pasos para iniciar un ordenador varian dependiendo a diversos factores, dispositivos de arranque, existencia de particiones, etc...</p>
   </article>
@@ -451,7 +451,7 @@
   <!--*************************************************************-->
   <section>
   <a name="1.16"></a>
-  <h3 >Registros del sistema</h3>  
+  <h3 class="subTitulo_3">Registros del sistema</h3>  
   <article>
       <p>En determinados S.O. nos brinda un registro que centraliza la configuración, sus servicios y aplicaciones. El visor de eventos complementan la información del registro. Es preciso realizar mantenimiento y limpieza regular.</p>
     </article>
@@ -460,7 +460,7 @@
   <!--*************************************************************-->
   <section>
   <a name="1.17"></a>
-  <h3 >Actualización y mantenimiento de controladores de dispositivos</h3>
+  <h3 class="subTitulo_3">Actualización y mantenimiento de controladores de dispositivos</h3>
     <article>
       <p>Drivers o controladores permiten que el S.O. pueden trabajar con ellos, conforme vayan apareciendo nuevas versiones de ellos para optimizar el rendimiento y minimizar problemas en el futuro.</p>
     </article>
