--- a/daw/sistemas/temaSeis.html
+++ b/daw/sistemas/temaSeis.html
@@ -33,7 +33,7 @@
   <!--*************************************************************-->
   <section>
     <div class="indice">
-      <h3>Índice</h3>
+      
       <ol>
         <li><a href="#6.1">Interpretación, análisis y elaboración de documentación técnica. Interpretación, análisis y elaboración de manuales de instalación</a></li>
         <li><a href="#6.2">Instalación y configuración de sistemas operativos y aplicaciones. Licencias de cliente y licencias de servidor</a></li>
@@ -47,42 +47,42 @@
   <!--*************************************************************-->
   <section>
     <article>
-      <h3 >Introducción</h3>
+      <h3 class="subTitulo_3">Introducción</h3>
     </article>
   <!--*************************************************************-->
   <a name="6.1"></a>
     <article>
-      <h3 >Interpretación, análisis y elaboración de documentación técnica. Interpretación, análisis y elaboración de manuales de instalación</h3>
+      <h3 class="subTitulo_3">Interpretación, análisis y elaboración de documentación técnica. Interpretación, análisis y elaboración de manuales de instalación</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="6.2"></a>
     <article>
-      <h3 >Instalación y configuración de sistemas operativos y aplicaciones. Licencias de cliente y licencias de servidor</h3>
+      <h3 class="subTitulo_3">Instalación y configuración de sistemas operativos y aplicaciones. Licencias de cliente y licencias de servidor</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="6.3"></a>
     <article>
-      <h3 >Instalación desatendidas e implementación de archivos de respuesta</h3>
+      <h3 class="subTitulo_3">Instalación desatendidas e implementación de archivos de respuesta</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="6.4"></a>
     <article>
-      <h3 >Servidores de actualizaciones automáticas</h3>
+      <h3 class="subTitulo_3">Servidores de actualizaciones automáticas</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="6.5"></a>
     <article>
-      <h3 >Partes de incidencias y protocolos de actuación</h3>
+      <h3 class="subTitulo_3">Partes de incidencias y protocolos de actuación</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="6.6"></a>
     <article>
-      <h3 >Administración remota</h3>
+      <h3 class="subTitulo_3">Administración remota</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
